--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/sequelize": "^10.0.1",
     "@nestjs/typeorm": "^10.0.2",
+    "mysql2": "^3.10.0",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "sequelize": "^6.37.3",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
