--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^10.0.1",
+    "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
+    "class-validator": "^0.14.1",
     "mysql2": "^3.10.0",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.1.13",
@@ -33,6 +35,7 @@
     "sequelize": "^6.37.3",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
