--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
     "class-validator": "^0.14.1",
+    "dayjs": "^1.11.11",
+    "moment": "^2.30.1",
     "mysql2": "^3.10.0",
+    "nest-winston": "^1.10.0",
+    "persian-date": "^1.1.0",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
@@ -36,7 +40,8 @@
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
